--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="js/lightsout.js"></script>
 </head>
 <body>
-    <div style="width: 1400px; height: 1400px;margin-left: auto; margin-right: auto; margin-top: auto; margin-bottom: auto; text-align: center" id="wrapper">
+    <div style="float: left; text-align: center" id="wrapper">
         <p style="display: inline-block; font-size: small; margin-bottom: 0" id="time">
         00.00
         <p style="display: inline-block; font-size: small; margin-bottom: 0">sec</p>
